--- a/refs.bib
+++ b/refs.bib
@@ -1931,3 +1931,77 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+
+@ARTICLE{2023AJ....165....9S,
+       author = {{Silber}, Joseph Harry and {Fagrelius}, Parker and {Fanning}, Kevin and {Schubnell}, Michael and {Aguilar}, Jessica Nicole and {Ahlen}, Steven and {Ameel}, Jon and {Ballester}, Otger and {Baltay}, Charles and {Bebek}, Chris and {Benton Beard}, Dominic and {Besuner}, Robert and {Cardiel-Sas}, Laia and {Casas}, Ricard and {Castander}, Francisco Javier and {Claybaugh}, Todd and {Dobson}, Carl and {Duan}, Yutong and {Dunlop}, Patrick and {Edelstein}, Jerry and {Emmet}, William T. and {Elliott}, Ann and {Evatt}, Matthew and {Gershkovich}, Irena and {Guy}, Julien and {Harris}, Stu and {Heetderks}, Henry and {Heetderks}, Ian and {Honscheid}, Klaus and {Illa}, Jose Maria and {Jelinsky}, Patrick and {Jelinsky}, Sharon R. and {Jimenez}, Jorge and {Karcher}, Armin and {Kent}, Stephen and {Kirkby}, David and {Kneib}, Jean-Paul and {Lambert}, Andrew and {Lampton}, Mike and {Leitner}, Daniela and {Levi}, Michael and {McCauley}, Jeremy and {Meisner}, Aaron and {Miller}, Timothy N. and {Miquel}, Ramon and {Mundet}, Juli{\'a} and {Poppett}, Claire and {Rabinowitz}, David and {Reil}, Kevin and {Roman}, David and {Schlegel}, David and {Serrano}, Santiago and {Van Shourt}, William and {Sprayberry}, David and {Tarl{\'e}}, Gregory and {Tie}, Suk Sien and {Weaverdyck}, Curtis and {Zhang}, Kai and {Azzaro}, Marco and {Bailey}, Stephen and {Becerril}, Santiago and {Blackwell}, Tami and {Bouri}, Mohamed and {Brooks}, David and {Buckley-Geer}, Elizabeth and {Castro}, Jose Pe{\~n}ate and {Derwent}, Mark and {Dey}, Arjun and {Dhungana}, Govinda and {Doel}, Peter and {Eisenstein}, Daniel J. and {Fahim}, Nasib and {Garcia-Bellido}, Juan and {Gazta{\~n}aga}, Enrique and {A Gontcho}, Satya Gontcho and {Gutierrez}, Gaston and {H{\"o}rler}, Philipp and {Kehoe}, Robert and {Kisner}, Theodore and {Kremin}, Anthony and {Kronig}, Luzius and {Landriau}, Martin and {Le Guillou}, Laurent and {Martini}, Paul and {Moustakas}, John and {Palanque-Delabrouille}, Nathalie and {Peng}, Xiyan and {Percival}, Will and {Prada}, Francisco and {Allende Prieto}, Carlos and {de Rivera}, Guillermo Gonzalez and {Sanchez}, Eusebio and {Sanchez}, Justo and {Sharples}, Ray and {Soares-Santos}, Marcelle and {Schlafly}, Edward and {Weaver}, Benjamin Alan and {Zhou}, Zhimin and {Zhu}, Yaling and {Zou}, Hu and {DESI Collaboration}},
+        title = "{The Robotic Multiobject Focal Plane System of the Dark Energy Spectroscopic Instrument (DESI)}",
+      journal = {\aj},
+     keywords = {Dark energy, Astronomical instrumentation, Spectrometers, Galaxy spectroscopy, 351, 799, 1554, 2171, Astrophysics - Instrumentation and Methods for Astrophysics, Astrophysics - Cosmology and Nongalactic Astrophysics},
+         year = 2023,
+        month = jan,
+       volume = {165},
+       number = {1},
+          eid = {9},
+        pages = {9},
+          doi = {10.3847/1538-3881/ac9ab1},
+archivePrefix = {arXiv},
+       eprint = {2205.09014},
+ primaryClass = {astro-ph.IM},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2023AJ....165....9S},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@ARTICLE{2013arXiv1308.0847L,
+       author = {{Levi}, Michael and {Bebek}, Chris and {Beers}, Timothy and {Blum}, Robert and {Cahn}, Robert and {Eisenstein}, Daniel and {Flaugher}, Brenna and {Honscheid}, Klaus and {Kron}, Richard and {Lahav}, Ofer and {McDonald}, Patrick and {Roe}, Natalie and {Schlegel}, David and {representing the DESI collaboration}},
+        title = "{The DESI Experiment, a whitepaper for Snowmass 2013}",
+      journal = {arXiv e-prints},
+     keywords = {Astrophysics - Cosmology and Extragalactic Astrophysics, Astrophysics - Instrumentation and Methods for Astrophysics},
+         year = 2013,
+        month = aug,
+          eid = {arXiv:1308.0847},
+        pages = {arXiv:1308.0847},
+          doi = {10.48550/arXiv.1308.0847},
+archivePrefix = {arXiv},
+       eprint = {1308.0847},
+ primaryClass = {astro-ph.CO},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2013arXiv1308.0847L},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2016arXiv161100037D,
+       author = {{DESI Collaboration} and {Aghamousa}, Amir and {Aguilar}, Jessica and {Ahlen}, Steve and {Alam}, Shadab and {Allen}, Lori E. and {Allende Prieto}, Carlos and {Annis}, James and {Bailey}, Stephen and {Balland}, Christophe and {Ballester}, Otger and {Baltay}, Charles and {Beaufore}, Lucas and {Bebek}, Chris and {Beers}, Timothy C. and {Bell}, Eric F. and {Bernal}, Jos{\'e} Luis and {Besuner}, Robert and {Beutler}, Florian and {Blake}, Chris and {Bleuler}, Hannes and {Blomqvist}, Michael and {Blum}, Robert and {Bolton}, Adam S. and {Briceno}, Cesar and {Brooks}, David and {Brownstein}, Joel R. and {Buckley-Geer}, Elizabeth and {Burden}, Angela and {Burtin}, Etienne and {Busca}, Nicolas G. and {Cahn}, Robert N. and {Cai}, Yan-Chuan and {Cardiel-Sas}, Laia and {Carlberg}, Raymond G. and {Carton}, Pierre-Henri and {Casas}, Ricard and {Castander}, Francisco J. and {Cervantes-Cota}, Jorge L. and {Claybaugh}, Todd M. and {Close}, Madeline and {Coker}, Carl T. and {Cole}, Shaun and {Comparat}, Johan and {Cooper}, Andrew P. and {Cousinou}, M. -C. and {Crocce}, Martin and {Cuby}, Jean-Gabriel and {Cunningham}, Daniel P. and {Davis}, Tamara M. and {Dawson}, Kyle S. and {de la Macorra}, Axel and {De Vicente}, Juan and {Delubac}, Timoth{\'e}e and {Derwent}, Mark and {Dey}, Arjun and {Dhungana}, Govinda and {Ding}, Zhejie and {Doel}, Peter and {Duan}, Yutong T. and {Ealet}, Anne and {Edelstein}, Jerry and {Eftekharzadeh}, Sarah and {Eisenstein}, Daniel J. and {Elliott}, Ann and {Escoffier}, St{\'e}phanie and {Evatt}, Matthew and {Fagrelius}, Parker and {Fan}, Xiaohui and {Fanning}, Kevin and {Farahi}, Arya and {Farihi}, Jay and {Favole}, Ginevra and {Feng}, Yu and {Fernandez}, Enrique and {Findlay}, Joseph R. and {Finkbeiner}, Douglas P. and {Fitzpatrick}, Michael J. and {Flaugher}, Brenna and {Flender}, Samuel and {Font-Ribera}, Andreu and {Forero-Romero}, Jaime E. and {Fosalba}, Pablo and {Frenk}, Carlos S. and {Fumagalli}, Michele and {Gaensicke}, Boris T. and {Gallo}, Giuseppe and {Garcia-Bellido}, Juan and {Gaztanaga}, Enrique and {Pietro Gentile Fusillo}, Nicola and {Gerard}, Terry and {Gershkovich}, Irena and {Giannantonio}, Tommaso and {Gillet}, Denis and {Gonzalez-de-Rivera}, Guillermo and {Gonzalez-Perez}, Violeta and {Gott}, Shelby and {Graur}, Or and {Gutierrez}, Gaston and {Guy}, Julien and {Habib}, Salman and {Heetderks}, Henry and {Heetderks}, Ian and {Heitmann}, Katrin and {Hellwing}, Wojciech A. and {Herrera}, David A. and {Ho}, Shirley and {Holland}, Stephen and {Honscheid}, Klaus and {Huff}, Eric and {Hutchinson}, Timothy A. and {Huterer}, Dragan and {Hwang}, Ho Seong and {Illa Laguna}, Joseph Maria and {Ishikawa}, Yuzo and {Jacobs}, Dianna and {Jeffrey}, Niall and {Jelinsky}, Patrick and {Jennings}, Elise and {Jiang}, Linhua and {Jimenez}, Jorge and {Johnson}, Jennifer and {Joyce}, Richard and {Jullo}, Eric and {Juneau}, St{\'e}phanie and {Kama}, Sami and {Karcher}, Armin and {Karkar}, Sonia and {Kehoe}, Robert and {Kennamer}, Noble and {Kent}, Stephen and {Kilbinger}, Martin and {Kim}, Alex G. and {Kirkby}, David and {Kisner}, Theodore and {Kitanidis}, Ellie and {Kneib}, Jean-Paul and {Koposov}, Sergey and {Kovacs}, Eve and {Koyama}, Kazuya and {Kremin}, Anthony and {Kron}, Richard and {Kronig}, Luzius and {Kueter-Young}, Andrea and {Lacey}, Cedric G. and {Lafever}, Robin and {Lahav}, Ofer and {Lambert}, Andrew and {Lampton}, Michael and {Landriau}, Martin and {Lang}, Dustin and {Lauer}, Tod R. and {Le Goff}, Jean-Marc and {Le Guillou}, Laurent and {Le Van Suu}, Auguste and {Lee}, Jae Hyeon and {Lee}, Su-Jeong and {Leitner}, Daniela and {Lesser}, Michael and {Levi}, Michael E. and {L'Huillier}, Benjamin and {Li}, Baojiu and {Liang}, Ming and {Lin}, Huan and {Linder}, Eric and {Loebman}, Sarah R. and {Luki{\'c}}, Zarija and {Ma}, Jun and {MacCrann}, Niall and {Magneville}, Christophe and {Makarem}, Laleh and {Manera}, Marc and {Manser}, Christopher J. and {Marshall}, Robert and {Martini}, Paul and {Massey}, Richard and {Matheson}, Thomas and {McCauley}, Jeremy and {McDonald}, Patrick and {McGreer}, Ian D. and {Meisner}, Aaron and {Metcalfe}, Nigel and {Miller}, Timothy N. and {Miquel}, Ramon and {Moustakas}, John and {Myers}, Adam and {Naik}, Milind and {Newman}, Jeffrey A. and {Nichol}, Robert C. and {Nicola}, Andrina and {Nicolati da Costa}, Luiz and {Nie}, Jundan and {Niz}, Gustavo and {Norberg}, Peder and {Nord}, Brian and {Norman}, Dara and {Nugent}, Peter and {O'Brien}, Thomas and {Oh}, Minji and {Olsen}, Knut A.~G. and {Padilla}, Cristobal and {Padmanabhan}, Hamsa and {Padmanabhan}, Nikhil and {Palanque-Delabrouille}, Nathalie and {Palmese}, Antonella and {Pappalardo}, Daniel and {P{\^a}ris}, Isabelle and {Park}, Changbom and {Patej}, Anna and {Peacock}, John A. and {Peiris}, Hiranya V. and {Peng}, Xiyan and {Percival}, Will J. and {Perruchot}, Sandrine and {Pieri}, Matthew M. and {Pogge}, Richard and {Pollack}, Jennifer E. and {Poppett}, Claire and {Prada}, Francisco and {Prakash}, Abhishek and {Probst}, Ronald G. and {Rabinowitz}, David and {Raichoor}, Anand and {Ree}, Chang Hee and {Refregier}, Alexandre and {Regal}, Xavier and {Reid}, Beth and {Reil}, Kevin and {Rezaie}, Mehdi and {Rockosi}, Constance M. and {Roe}, Natalie and {Ronayette}, Samuel and {Roodman}, Aaron and {Ross}, Ashley J. and {Ross}, Nicholas P. and {Rossi}, Graziano and {Rozo}, Eduardo and {Ruhlmann-Kleider}, Vanina and {Rykoff}, Eli S. and {Sabiu}, Cristiano and {Samushia}, Lado and {Sanchez}, Eusebio and {Sanchez}, Javier and {Schlegel}, David J. and {Schneider}, Michael and {Schubnell}, Michael and {Secroun}, Aur{\'e}lia and {Seljak}, Uros and {Seo}, Hee-Jong and {Serrano}, Santiago and {Shafieloo}, Arman and {Shan}, Huanyuan and {Sharples}, Ray and {Sholl}, Michael J. and {Shourt}, William V. and {Silber}, Joseph H. and {Silva}, David R. and {Sirk}, Martin M. and {Slosar}, Anze and {Smith}, Alex and {Smoot}, George F. and {Som}, Debopam and {Song}, Yong-Seon and {Sprayberry}, David and {Staten}, Ryan and {Stefanik}, Andy and {Tarle}, Gregory and {Sien Tie}, Suk and {Tinker}, Jeremy L. and {Tojeiro}, Rita and {Valdes}, Francisco and {Valenzuela}, Octavio and {Valluri}, Monica and {Vargas-Magana}, Mariana and {Verde}, Licia and {Walker}, Alistair R. and {Wang}, Jiali and {Wang}, Yuting and {Weaver}, Benjamin A. and {Weaverdyck}, Curtis and {Wechsler}, Risa H. and {Weinberg}, David H. and {White}, Martin and {Yang}, Qian and {Yeche}, Christophe and {Zhang}, Tianmeng and {Zhao}, Gong-Bo and {Zheng}, Yi and {Zhou}, Xu and {Zhou}, Zhimin and {Zhu}, Yaling and {Zou}, Hu and {Zu}, Ying},
+        title = "{The DESI Experiment Part II: Instrument Design}",
+      journal = {arXiv e-prints},
+     keywords = {Astrophysics - Instrumentation and Methods for Astrophysics, Astrophysics - Cosmology and Nongalactic Astrophysics},
+         year = 2016,
+        month = oct,
+          eid = {arXiv:1611.00037},
+        pages = {arXiv:1611.00037},
+          doi = {10.48550/arXiv.1611.00037},
+archivePrefix = {arXiv},
+       eprint = {1611.00037},
+ primaryClass = {astro-ph.IM},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2016arXiv161100037D},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2022AJ....164..207D,
+       author = {{DESI Collaboration} and {Abareshi}, B. and {Aguilar}, J. and {Ahlen}, S. and {Alam}, Shadab and {Alexander}, David M. and {Alfarsy}, R. and {Allen}, L. and {Allende Prieto}, C. and {Alves}, O. and {Ameel}, J. and {Armengaud}, E. and {Asorey}, J. and {Aviles}, Alejandro and {Bailey}, S. and {Balaguera-Antol{\'\i}nez}, A. and {Ballester}, O. and {Baltay}, C. and {Bault}, A. and {Beltran}, S.~F. and {Benavides}, B. and {BenZvi}, S. and {Berti}, A. and {Besuner}, R. and {Beutler}, Florian and {Bianchi}, D. and {Blake}, C. and {Blanc}, P. and {Blum}, R. and {Bolton}, A. and {Bose}, S. and {Bramall}, D. and {Brieden}, S. and {Brodzeller}, A. and {Brooks}, D. and {Brownewell}, C. and {Buckley-Geer}, E. and {Cahn}, R.~N. and {Cai}, Z. and {Canning}, R. and {Capasso}, R. and {Carnero Rosell}, A. and {Carton}, P. and {Casas}, R. and {Castander}, F.~J. and {Cervantes-Cota}, J.~L. and {Chabanier}, S. and {Chaussidon}, E. and {Chuang}, C. and {Circosta}, C. and {Cole}, S. and {Cooper}, A.~P. and {da Costa}, L. and {Cousinou}, M. -C. and {Cuceu}, A. and {Davis}, T.~M. and {Dawson}, K. and {de la Cruz-Noriega}, R. and {de la Macorra}, A. and {de Mattia}, A. and {Della Costa}, J. and {Demmer}, P. and {Derwent}, M. and {Dey}, A. and {Dey}, B. and {Dhungana}, G. and {Ding}, Z. and {Dobson}, C. and {Doel}, P. and {Donald-McCann}, J. and {Donaldson}, J. and {Douglass}, K. and {Duan}, Y. and {Dunlop}, P. and {Edelstein}, J. and {Eftekharzadeh}, S. and {Eisenstein}, D.~J. and {Enriquez-Vargas}, M. and {Escoffier}, S. and {Evatt}, M. and {Fagrelius}, P. and {Fan}, X. and {Fanning}, K. and {Fawcett}, V.~A. and {Ferraro}, S. and {Ereza}, J. and {Flaugher}, B. and {Font-Ribera}, A. and {Forero-Romero}, J.~E. and {Frenk}, C.~S. and {Fromenteau}, S. and {G{\"a}nsicke}, B.~T. and {Garcia-Quintero}, C. and {Garrison}, L. and {Gazta{\~n}aga}, E. and {Gerardi}, F. and {Gil-Mar{\'\i}n}, H. and {Gontcho a Gontcho}, S. and {Gonzalez-Morales}, Alma X. and {Gonzalez-de-Rivera}, G. and {Gonzalez-Perez}, V. and {Gordon}, C. and {Graur}, O. and {Green}, D. and {Grove}, C. and {Gruen}, D. and {Gutierrez}, G. and {Guy}, J. and {Hahn}, C. and {Harris}, S. and {Herrera}, D. and {Herrera-Alcantar}, Hiram K. and {Honscheid}, K. and {Howlett}, C. and {Huterer}, D. and {Ir{\v{s}}i{\v{c}}}, V. and {Ishak}, M. and {Jelinsky}, P. and {Jiang}, L. and {Jimenez}, J. and {Jing}, Y.~P. and {Joyce}, R. and {Jullo}, E. and {Juneau}, S. and {Kara{\c{c}}ayl{\i}}, N.~G. and {Karamanis}, M. and {Karcher}, A. and {Karim}, T. and {Kehoe}, R. and {Kent}, S. and {Kirkby}, D. and {Kisner}, T. and {Kitaura}, F. and {Koposov}, S.~E. and {Kov{\'a}cs}, A. and {Kremin}, A. and {Krolewski}, Alex and {L'Huillier}, B. and {Lahav}, O. and {Lambert}, A. and {Lamman}, C. and {Lan}, Ting-Wen and {Landriau}, M. and {Lane}, S. and {Lang}, D. and {Lange}, J.~U. and {Lasker}, J. and {Le Guillou}, L. and {Leauthaud}, A. and {Le Van Suu}, A. and {Levi}, Michael E. and {Li}, T.~S. and {Magneville}, C. and {Manera}, M. and {Manser}, Christopher J. and {Marshall}, B. and {Martini}, Paul and {McCollam}, W. and {McDonald}, P. and {Meisner}, Aaron M. and {Mena-Fern{\'a}ndez}, J. and {Meneses-Rizo}, J. and {Mezcua}, M. and {Miller}, T. and {Miquel}, R. and {Montero-Camacho}, P. and {Moon}, J. and {Moustakas}, J. and {Mueller}, E. and {Mu{\~n}oz-Guti{\'e}rrez}, Andrea and {Myers}, Adam D. and {Nadathur}, S. and {Najita}, J. and {Napolitano}, L. and {Neilsen}, E. and {Newman}, Jeffrey A. and {Nie}, J.~D. and {Ning}, Y. and {Niz}, G. and {Norberg}, P. and {Noriega}, Hern{\'a}n E. and {O'Brien}, T. and {Obuljen}, A. and {Palanque-Delabrouille}, N. and {Palmese}, A. and {Zhiwei}, P. and {Pappalardo}, D. and {PENG}, X. and {Percival}, W.~J. and {Perruchot}, S. and {Pogge}, R. and {Poppett}, C. and {Porredon}, A. and {Prada}, F. and {Prochaska}, J. and {Pucha}, R. and {P{\'e}rez-Fern{\'a}ndez}, A. and {P{\'e}rez-R{\`a}fols}, I. and {Rabinowitz}, D. and {Raichoor}, A. and {Ramirez-Solano}, S. and {Ram{\'\i}rez-P{\'e}rez}, C{\'e}sar and {Ravoux}, C. and {Reil}, K. and {Rezaie}, M. and {Rocher}, A. and {Rockosi}, C. and {Roe}, N.~A. and {Roodman}, A. and {Ross}, A.~J. and {Rossi}, G. and {Ruggeri}, R. and {Ruhlmann-Kleider}, V. and {Sabiu}, C.~G. and {Safonova}, S. and {Said}, K. and {Saintonge}, A. and {Salas Catonga}, Javier and {Samushia}, L. and {Sanchez}, E. and {Saulder}, C. and {Schaan}, E. and {Schlafly}, E. and {Schlegel}, D. and {Schmoll}, J. and {Scholte}, D. and {Schubnell}, M. and {Secroun}, A. and {Seo}, H. and {Serrano}, S. and {Sharples}, Ray M. and {Sholl}, Michael J. and {Silber}, Joseph Harry and {Silva}, D.~R. and {Sirk}, M. and {Siudek}, M. and {Smith}, A. and {Sprayberry}, D. and {Staten}, R. and {Stupak}, B. and {Tan}, T. and {Tarl{\'e}}, Gregory and {Tie}, Suk Sien and {Tojeiro}, R. and {Ure{\~n}a-L{\'o}pez}, L.~A. and {Valdes}, F. and {Valenzuela}, O. and {Valluri}, M. and {Vargas-Maga{\~n}a}, M. and {Verde}, L. and {Walther}, M. and {Wang}, B. and {Wang}, M.~S. and {Weaver}, B.~A. and {Weaverdyck}, C. and {Wechsler}, R. and {Wilson}, Michael J. and {Yang}, J. and {Yu}, Y. and {Yuan}, S. and {Y{\`e}che}, Christophe and {Zhang}, H. and {Zhang}, K. and {Zhao}, Cheng and {Zhou}, Rongpu and {Zhou}, Zhimin and {Zou}, H. and {Zou}, J. and {Zou}, S. and {Zu}, Y. and {DESI Collaboration}},
+        title = "{Overview of the Instrumentation for the Dark Energy Spectroscopic Instrument}",
+      journal = {\aj},
+     keywords = {Dark energy, Spectroscopy, Astronomical instrumentation, Spectrometers, Optical telescopes, 351, 1558, 799, 1554, 1174, Astrophysics - Instrumentation and Methods for Astrophysics, Astrophysics - Cosmology and Nongalactic Astrophysics},
+         year = 2022,
+        month = nov,
+       volume = {164},
+       number = {5},
+          eid = {207},
+        pages = {207},
+          doi = {10.3847/1538-3881/ac882b},
+archivePrefix = {arXiv},
+       eprint = {2205.10939},
+ primaryClass = {astro-ph.IM},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2022AJ....164..207D},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
