--- a/sections/authorlist.tex
+++ b/sections/authorlist.tex
@@ -3,7 +3,7 @@
 \author[M. Rezaie et al.]{Mehdi Rezaie$^{1}$, Ashley J. Ross$^{2}$, Hee-Jong Seo$^{3,4}$,  Hui Kong$^{5}$,  Anna Porredon$^{6}$,\newauthor
 Lado Samushia$^{1}$, Edmond Chaussidon$^{7}$, Alex Krolewski$^{8,9, 10}$, Arnaud de Mattia$^{7}$,\newauthor
 Santiago Avila$^{5}$, Benedict Bahr-Kalus$^{11}$, Jose R. Bermejo-Climent$^{12}$, Florian Beutler$^{6}$,\newauthor 
-Klaus Honscheid$^{2,13}$, Eva-Maria Mueller$^{14,15}$, Adam Myers$^{16}$,\newauthor
+Klaus Honscheid$^{2,13}$, Eva-Maria Mueller$^{14,15}$, Adam Myers$^{16}$, Jeffrey A. Newman$^{17}$,\newauthor
 Nathalie Palanque-Delabrouille$^{4,7}$, Will Percival$^{8,9,10}$, Christophe Yeche$^{7}$
 \\~\\
 % List of institutions
@@ -22,5 +22,6 @@ $^{12}$ Department of Physics and Astronomy, University of Rochester, 500 Joseph
 $^{13}$Department of Physics, The Ohio State University, 191 West Woodruff Avenue, Columbus, OH 43210, USA\\
 $^{14}$Institute of Cosmology and Gravitation, Dennis Sciama Building, University of Portsmouth, Portsmouth PO1 3FX, UK \\
 $^{15}$Department of Physics \& Astronomy, University of Sussex, Brighton BN1 9QH, UK\\
-$^{16}$Department of Physics and Astronomy, University of Wyoming, Laramie, WY 82071, USA
+$^{16}$Department of Physics and Astronomy, University of Wyoming, Laramie, WY 82071, USA\\
+$^{17}$Department of Physics and Astronomy and PITT PACC, University of Pittsburgh, Pittsburgh, PA 15260, USA
 }
