--- a/sections/extra.tex
+++ b/sections/extra.tex
@@ -58,18 +58,17 @@ Measuring the power spectrum from the entire DESI footprint reduces the cosmic v
 The power spectrum of the mocks at low $\ell$ is very sensitive to the cosmic variance and the true value of $\fnl$. Consequently, a large value of $\fnl$ can induce a very large power on low $\ell$, and thus significantly change the covariance matrix. We find that applying the log transformation on the power spectrum makes the result more robust against the choice of the covariance matrix. Figure \ref{fig:mcmc_mocks100} shows the confidence contours when we fit either the power spectrum or its log transform of the $\fnl=76.9$ mocks, and use different covariance matrices. We consider the $\fnl=0$ and $76.9$ mocks to construct the covariance from one set and use it to fit the mean power spectrum of the other set. When the covariance matrix is constructed from the same set of mocks used for the mean power spectrum, we find that the difference in $\fnl$ constraints between fitting the power spectrum and its log transformation is negligible at only 2\%. If we use the $\fnl=0$ mocks to estimate the covariance, and fit the log power spectrum of the $\fnl=76.9$ mocks, we find that the error on $\fnl$ increases only by $7\%$. However, when the mean power spectrum of the $\fnl=76.9$ mocks is fit using the covariance matrix estimated from the $\fnl=0$ mocks, the constraints tighten by a factor of $5$ due to a higher signal to noise ratio. Therefore, we argue that fitting the log power spectrum can help mitigate the need for having $\fnl$-dependent covariance matrices and make the constraints less sensitive to covariance construction.
 
 \begin{figure}
-    \centering
-    \includegraphics[width=0.45\textwidth]{figures/bestfit_zero.pdf} 
+    \centering    \includegraphics[width=0.45\textwidth]{figures/bestfit_zero.pdf} 
     \includegraphics[width=0.45\textwidth]{figures/bestfit_po100.pdf}         
     \caption{best-fitting estimates from fitting 1000 lognormal mocks with $\fnl=0$ (top) and $76.9$ (bottom) in the DESI footprint. The truth values are represented by vertical and horizontal lines. The truth values are represented by vertical and horizontal lines.}\label{fig:bestfit_mocks}
 \end{figure}
 
 
-Fig \ref{fig:bestfit_mocks} shows the best-fitting estimates for $b$ vs $\fnl$ for $\fnl=0$ and $=76.9$ mocks in the top and bottom panels, respectively. Truth values are represented via the dotted lines. The points are color-coded with the minimum $\chi^{2}$ from fit for each realization. The histograms of best-fitting $\fnl$ estimates are plotted in the background. For the $\fnl=0$ mocks, the best-fitting estimates are more symmetric. To understand this behaviour, we consider the first derivative of the likelihood (Equation \ref{eq:likelihood}), which is proportional to the first derivative of the log power spectrum. By simplifying the integrals involved in $C_{\ell}$, we have $C_{\ell} = A_{0, \ell} + A_{1,\ell} \fnl + A_{2, \ell} \fnl^{2}$ where $A_{123,\ell}$ are $\ell$-dependent terms. Then, the derivative of the likelihood is equivalent to
+Figure \ref{fig:bestfit_mocks} shows the best-fitting estimates for $b$ vs $\fnl$ for $\fnl=0$ and $=76.9$ mocks in the top and bottom panels, respectively. Truth values are represented via the dotted lines. The points are color-coded with the minimum $\chi^{2}$ from fit for each realization. The histograms of best-fitting $\fnl$ estimates are plotted in the background. For the $\fnl=0$ mocks, the best-fitting estimates are more symmetric. To understand this behaviour, we consider the first derivative of the likelihood (Equation \ref{eq:likelihood}), which is proportional to the first derivative of the log power spectrum. By simplifying the integrals involved in $C_{\ell}$, we have $C_{\ell} = A_{0, \ell} + A_{1,\ell} \fnl + A_{2, \ell} \fnl^{2}$ where $A_{123,\ell}$ are $\ell$-dependent terms. Then, the derivative of the likelihood is equivalent to
 \begin{equation}
     \frac{d}{d\fnl}\log(C_{\ell}) = \frac{A_{1, \ell}+2A_{2, \ell}\fnl}{A_{0, \ell} + A_{1,\ell} \fnl + A_{2, \ell} \fnl^{2}}.
 \end{equation}
-For infinitesimal values of $\fnl$, the derivative becomes asymptotically independent from $\fnl$ while for large values of $\fnl$ is decreases as $2/\fnl$, which implies for the $\fnl=0$ mocks, it is more likely that the likelihood is skewed toward negative values.
+For infinitesimal values of $\fnl$, the derivative becomes asymptotically independent from $\fnl$ while for large values of $\fnl$ is decreases as $2/\fnl$. This implies that for the $\fnl=0$ mocks, the likelihood is more likely to be skewed toward negative values.
 
 \subsection{Contaminated mocks}
 Our nonlinear neural network-based approach is applied to the $\fnl=0$ and $76.9$ mocks. We only consider the methods that include running the neural network with three, four, and nine imaging systematic maps. The measured mean power spectrum of the mocks are shown in Figure \ref{fig:clmocks} for $\fnl=0$ (left) and $76.9$ (right). The solid and dashed curves show the measurements respectively from the clean and contaminated mocks.
