--- a/sections/introduction.tex
+++ b/sections/introduction.tex
@@ -12,7 +12,7 @@ where $\Phi$ is the primordial curvature perturbation and $\phi$ is assumed to b
 %\mc{Ashley: I would make the paragraph about current LSS constraints longer, adding details about forecasts for future and/or merge with the paragraph about CMB results. Basically, what should come out of the text is that, at least in terms of Fisher forecasts (and ignoring the assembly bias issue) LSS offers the most promise. I would add the pieces about DESI that you have later in the introduction here.}
 The current tightest bound on $\fnl$ comes from Planck's bispectrum measurement of CMB anisotropies, $\fnl=0.9\pm 5.1$ \citep{akrami2019planck}. Limited by cosmic variance, CMB data cannot enhance the statistical precision of $\fnl$ measurements enough to break the degeneracy amongst various inflationary paradigms \citep[see, e.g.,][]{2016arXiv161002743A, ade2019simons}. On the other hand, LSS surveys probe a 3D map of the Universe, and thus provide more modes to limit $\fnl$. However, nonlinearities raised from structure formation pose a serious challenge for measuring $\fnl$ with the three-point clustering of galaxies, and these nonlinear effects are non-trivial to model and disentangle from the primordial signal \citep{baldauf2011galaxy, baldauf2011primordial}.
 
-Currently, the most precise constraints on $\fnl$ from LSS reach a level of $\sigma(\fnl) \sim 20-30$, with the majority of the constraining power coming from the two-point clustering statistics that utilize the scale-dependent bias effect \citep{2019JCAP...09..010C, mueller2022primordial, 2022PhRvD.106d3506C, 2022arXiv220111518D}. Surveying large areas of the sky can unlock more modes and help improve these constraints. As an ongoing wide-area galaxy survey, the Dark Energy Spectroscopic Instrument (DESI) uses $5000$ robotically-driven fibers to simultaneously collect spectra of extra-galactic objects. DESI is designed to deliver an unparalleled volume of spectroscopic data covering $\sim 14,000$ square degrees that promises to deepen our understanding of the energy contents of the Universe, neutrino masses, and the nature of gravity \citep{aghamousa2016desi}. Moreover, DESI alone is expected to improve our constraints on local PNG down to $\sigma(\fnl)=5$, assuming systematic uncertainties are under control \citep{aghamousa2016desi}. With multi-tracer techniques, cosmic variance can be further reduced to allow surpassing CMB-like constraints \citep{2015ApJ...814..145A}. For instance, the distortion of CMB photons around foreground masses, which is referred to as CMB lensing, provides an additional probe of LSS, but from a different vantage point. We can significantly reduce statistical uncertainties below $\sigma(\fnl)\sim 1$ by cross-correlating LSS data with CMB-lensing, or other tracers of matter, such as 21 cm intensity mapping  \citep[see, e.g.,][]{schmittfull2018PhRvD, Heinrich2022AAS...24020203H, 2023arXiv230102406J, 2023arXiv230308901S}.  
+Currently, the most precise constraints on $\fnl$ from LSS reach a level of $\sigma(\fnl) \sim 20-30$, with the majority of the constraining power coming from the two-point clustering statistics that utilize the scale-dependent bias effect \citep{2019JCAP...09..010C, mueller2022primordial, 2022PhRvD.106d3506C, 2022arXiv220111518D}. Surveying large areas of the sky can unlock more modes and help improve these constraints. As an ongoing wide-area galaxy survey, the Dark Energy Spectroscopic Instrument (DESI) uses $5000$ robotically-driven fibers to simultaneously collect spectra of extra-galactic objects \citep{2013arXiv1308.0847L, 2016arXiv161100037D, 2023AJ....165....9S}. DESI is designed to deliver an unparalleled volume of spectroscopic data covering $\sim 14,000$ square degrees that promises to deepen our understanding of the energy contents of the Universe, neutrino masses, and the nature of gravity \citep{2022AJ....164..207D}. Moreover, DESI alone is expected to improve our constraints on local PNG down to $\sigma(\fnl)=5$, assuming systematic uncertainties are under control \citep{aghamousa2016desi}. With multi-tracer techniques, cosmic variance can be further reduced to allow surpassing CMB-like constraints \citep{2015ApJ...814..145A}. For instance, the distortion of CMB photons around foreground masses, which is referred to as CMB lensing, provides an additional probe of LSS, but from a different vantage point. We can significantly reduce statistical uncertainties below $\sigma(\fnl)\sim 1$ by cross-correlating LSS data with CMB-lensing, or other tracers of matter, such as 21 cm intensity mapping  \citep[see, e.g.,][]{schmittfull2018PhRvD, Heinrich2022AAS...24020203H, 2023arXiv230102406J, 2023arXiv230308901S}.  
  
 
 %\mc{Ashley: I think the only modeling issues that really ends up being relevant are the assembly bias and integral constraint. I would mention the assembly bias issue and probably expand on that a little and specifically say that we won't actually marginalize over it in this analysis. I don't know that the integral constraint issue needs to be discussed in the introduction, since the modeling needed to address it is fairly clear. (It should definitely be described in the modeling section.) I think the other modeling issues I wouldn't get into, especially in the introduction. Perhaps in the modeling section you can just list them all as being sub-dominant issues for our analysis that we do not worry about.}
